--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # CMakeLists.txt for Towers vs. Invaders
 cmake_minimum_required(VERSION 3.1)
 
-project(tower_defense)
+project(nova)
 
 # use C++17
 set (CMAKE_CXX_STANDARD 17)
