--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ if (IS_OS_MAC)
     link_directories(/opt/homebrew/lib)
 endif()
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} "src/ai_system.cpp" "src/collision_system.cpp")
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} "src/ai_system.cpp" "src/collision_system.cpp" "src/physics_system.cpp")
 target_include_directories(${PROJECT_NAME} PUBLIC src/)
 
 # Added this so policy CMP0065 doesn't scream
