Add save and load functionality to the game

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ if (IS_OS_MAC)
     link_directories(/opt/homebrew/lib)
 endif()
 
-add_executable(${PROJECT_NAME} ${SOURCE_FILES} "src/ai_system.cpp" "src/collision_system.cpp" "src/physics_system.cpp")
+add_executable(${PROJECT_NAME} ${SOURCE_FILES} "src/save_and_load.cpp")
 target_include_directories(${PROJECT_NAME} PUBLIC src/)
 
 # Added this so policy CMP0065 doesn't scream
@@ -47,6 +47,7 @@ set_target_properties(${PROJECT_NAME} PROPERTIES ENABLE_EXPORTS 0)
 target_include_directories(${PROJECT_NAME} PUBLIC ext/stb_image/)
 target_include_directories(${PROJECT_NAME} PUBLIC ext/gl3w)
 target_include_directories(${PROJECT_NAME} PUBLIC ext/entt/include/)
+target_include_directories(${PROJECT_NAME} PUBLIC ext/nlohmann/single_include/)
 
 # Find OpenGL
 find_package(OpenGL REQUIRED)
