--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,9 @@ if (IS_OS_MAC)
         target_link_libraries(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB})
     endif()
 elseif (IS_OS_WINDOWS)
-    target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/freetype.lib)
+    #target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/freetype.lib)
+        target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/build/Release/freetype.lib)
+
 elseif (IS_OS_LINUX)
     target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/.libs/libfreetype.a)
 endif()
