--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if (IS_OS_MAC)
     if(NOT FREETYPE_LIB)
         message(WARNING "FreeType library not found, text rendering may not work")
     else()
-        target_link_libraries(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB})
+        # target_link_libraries(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB})
     endif()
 elseif (IS_OS_WINDOWS)
     target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/freetype.lib)
