--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,11 +60,10 @@ if (IS_OS_MAC)
     if(NOT FREETYPE_LIB)
         message(WARNING "FreeType library not found, text rendering may not work")
     else()
-        # target_link_libraries(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB})
+        target_link_libraries(${PROJECT_NAME} PUBLIC ${FREETYPE_LIB})
     endif()
 elseif (IS_OS_WINDOWS)
     target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/freetype.lib)
-    #    target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/build/Release/freetype.lib)
 
 elseif (IS_OS_LINUX)
     target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ext/freetype/objs/.libs/libfreetype.a)
