remove compiler warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,8 +36,8 @@ if (IS_OS_MAC)
     include_directories(/opt/homebrew/include)
     link_directories(/opt/homebrew/lib)
     # Add specific library paths
-    include_directories(/opt/homebrew/opt/bzip2/include)
-    link_directories(/opt/homebrew/opt/bzip2/lib)
+    # include_directories(/opt/homebrew/opt/bzip2/include)
+    # link_directories(/opt/homebrew/opt/bzip2/lib)
     include_directories(/opt/homebrew/opt/libpng/include)
     link_directories(/opt/homebrew/opt/libpng/lib)
 endif()
